studied if else (if) & switch

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   </head>
   <body>
     <h1></h1>
+    <div class="container">
+      <label for="">Enter age:</label>
+      <input type="text" class="yourAge" />
+      <button>ok</button>
+    </div>
 
     <!--такой способ вставки кода редко используется, чаще создют отдельный файл.js
     <script>
