--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
       h1.innerText = "Hello JS!!!";
       h1.style.color = "orange";
     </script>-->
-    <script src="index.js"></script>
+    <!--<script src="index.js"></script>-->
+
+    <div class="container">
+      <label for="">Enter date:</label>
+      <input type="text" class="date" />
+      <button>ok</button>
+    </div>
+
+    <script src="checkpoint1.js"></script>
   </body>
 </html>
